<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/modifyTeamGroup"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/nav_action_add"
            android:orderInCategory="100"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/action_add" />
        <item
            android:id="@+id/nav_action_delete"
            android:orderInCategory="100"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            android:title="@string/action_delete" />
    </group>
    <item
        android:id="@+id/nav_action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/nav_action_email"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/action_email" />
    <item
        android:id="@+id/nav_action_sms"
        android:icon="@drawable/ic_sms_black_24dp"
        android:title="@string/action_sms" />
    <group
        android:checkableBehavior="single"
        android:menuCategory="secondary">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>
